{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 1129,
  "lineage": "b4087367-9b05-1235-de49-2ec64641b59b",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423200636:vpc/vpc-089d1e09cb9566be3",
            "cidr_block": "10.0.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0fbf9dd25a49c7e0b",
                "cidr_block": "10.0.0.0/16",
                "state": "associated"
              }
            ],
            "default": false,
            "dhcp_options_id": "dopt-015fb501553570932",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-089d1e09cb9566be3",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09509df9c670211cf",
            "owner_id": "637423200636",
            "tags": {
              "Environment": "production",
              "Name": "model-service-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d03c26f079ff089b",
            "arn": "arn:aws:ec2:us-east-1:637423200636:elastic-ip/eipalloc-0d03c26f079ff089b",
            "association_id": "eipassoc-093da24ada2d6cff0",
            "domain": "vpc",
            "id": "eipalloc-0d03c26f079ff089b",
            "instance": "i-0837331e053dbd7e1",
            "network_border_group": "us-east-1",
            "network_interface": "eni-00397acbd6e1f34c7",
            "private_dns": "ip-10-1-1-136.ec2.internal",
            "private_ip": "10.1.1.136",
            "public_dns": "ec2-52-45-2-135.compute-1.amazonaws.com",
            "public_ip": "52.45.2.135",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_ecr_repository.model",
            "aws_iam_instance_profile.model_server",
            "aws_iam_role.ec2_role",
            "aws_instance.model_server",
            "aws_key_pair.deployer",
            "aws_security_group.model_server",
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "model_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0772e0bfc7cc9c5de",
            "arn": "arn:aws:ec2:us-east-1:637423200636:instance/i-0837331e053dbd7e1",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "model-client_server_profile",
            "id": "i-0837331e053dbd7e1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "g4dn.xlarge",
            "ipv6_address_count": 0,
            "key_name": "model-client-deployer-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00397acbd6e1f34c7",
            "private_dns": "ip-10-1-1-136.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.136",
            "public_dns": "ec2-52-45-2-135.compute-1.amazonaws.com",
            "public_ip": "52.45.2.135",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d3242a30de578a32",
                "volume_size": 60,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-070d97a11fd3eade1",
            "tags": {
              "Environment": "dev",
              "Name": "model-client-server"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "model-client-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fd9fcc61a1bb6950"
            ]
          },
          "dependencies": [
            "aws_ecr_repository.model",
            "aws_iam_instance_profile.model_server",
            "aws_iam_role.ec2_role",
            "aws_key_pair.deployer",
            "aws_security_group.model_server",
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423200636:internet-gateway/igw-032fd25697c04236c",
            "id": "igw-032fd25697c04236c",
            "owner_id": "637423200636",
            "tags": {
              "Environment": "dev",
              "Name": "model-client-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "model-client-igw"
            },
            "vpc_id": "vpc-0a51757b17242b139"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423200636:route-table/rtb-0f1fc13ca85bed3dc",
            "id": "rtb-0f1fc13ca85bed3dc",
            "owner_id": "637423200636",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-032fd25697c04236c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-00013b1fd85b3daef"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "model-client-route-table"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "model-client-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a51757b17242b139"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main",
            "aws_vpc_peering_connection.main",
            "data.aws_vpc.server"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f8aac42406814e24",
            "route_table_id": "rtb-0f1fc13ca85bed3dc",
            "subnet_id": "subnet-070d97a11fd3eade1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main",
            "aws_subnet.main",
            "aws_vpc.main",
            "aws_vpc_peering_connection.main",
            "data.aws_vpc.server"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "model_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423200636:security-group/sg-0fd9fcc61a1bb6950",
            "description": "Security group for model server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fd9fcc61a1bb6950",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16",
                  "10.1.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "model-client-sg",
            "name_prefix": "",
            "owner_id": "637423200636",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "model-client-sg"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "model-client-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a51757b17242b139"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423200636:subnet/subnet-070d97a11fd3eade1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-070d97a11fd3eade1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "637423200636",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "model-client-subnet"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "model-client-subnet"
            },
            "vpc_id": "vpc-0a51757b17242b139"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:637423200636:vpc/vpc-0a51757b17242b139",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0fe2b36c3b87d5f7b",
            "default_route_table_id": "rtb-030fa1270e1cd0652",
            "default_security_group_id": "sg-0bf4051abaa34dec4",
            "dhcp_options_id": "dopt-015fb501553570932",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a51757b17242b139",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-030fa1270e1cd0652",
            "owner_id": "637423200636",
            "tags": {
              "Environment": "dev",
              "Name": "model-client-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "model-client-vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-00013b1fd85b3daef",
            "peer_owner_id": "637423200636",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-089d1e09cb9566be3",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "vpc_id": "vpc-0a51757b17242b139"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}